# projfrwk-com-log

./: .gitignore  CMakeLists.txt  Kconfig  project.py
code/: CMakeLists.txt
code/inc/: log.h
code/inc_pub/: log_api.h
code/src/: log.c  log_api.c
unit_test/: CMakeLists.txt
unit_test/inc/: log_ut.h
unit_test/src/: log_ut.c  main.c
